--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 /Aula 5/Prática/RelogioSwing/dist/
 /Aula 5/Prática/LinguagemSwing/dist/
 /Aula 5/Prática/ResolucaoSwing/dist/
+/Aula 6/TiposPrimitivos/nbproject/private/
+/Aula 6/TiposPrimitivos/build/
+/Aula 6/JavaApplication9/nbproject/private/
+/Aula 6/TesteTipos/nbproject/private/
+/Aula 6/TesteTipos/build/
+/Aula 6/SomaSwing/nbproject/private/
+/Aula 6/SomaSwing/build/
+/Aula 6/Prática/CalculadoraIdade/nbproject/private/
+/Aula 6/Prática/CalculadoraIdade/build/
+/Aula 6/Prática/CalculadoraIdade/dist/
