--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /Aula 6/Prática/CalculadoraIdade/nbproject/private/
 /Aula 6/Prática/CalculadoraIdade/build/
 /Aula 6/Prática/CalculadoraIdade/dist/
+/Aula 6/SomaSwing/dist/
