--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@
 /Aula 6/Prática/CalculadoraIdade/build/
 /Aula 6/Prática/CalculadoraIdade/dist/
 /Aula 6/SomaSwing/dist/
+/Aula 7/OperadoresAritmeticos/nbproject/private/
+/Aula 7/OperadoresAritmeticos/build/
+/Aula 7/OperadoresSwing/nbproject/private/
+/Aula 7/OperadoresSwing/build/
+/Aula 7/Prática/SuperCalculadora/nbproject/private/
+/Aula 7/Prática/SuperCalculadora/build/
+/Aula 7/OperadoresSwing/dist/
+/Aula 7/Prática/SuperCalculadora/dist/
