--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@
 /Aula 7/Prática/SuperCalculadora/build/
 /Aula 7/OperadoresSwing/dist/
 /Aula 7/Prática/SuperCalculadora/dist/
+/Aula 8/OperadorTernario/nbproject/private/
+/Aula 8/OperadorTernario/build/
+/Aula 8/ComparacaoString/nbproject/private/
+/Aula 8/ComparacaoString/build/
+/Aula 8/OperadoresLogicos/nbproject/private/
+/Aula 8/OperadoresLogicos/build/
+/Aula 8/VerificadorIdadeSwing/nbproject/private/
+/Aula 8/VerificadorIdadeSwing/build/
+/Aula 8/Prática/CabecaDeGenio/nbproject/private/
+/Aula 8/Prática/CabecaDeGenio/build/
+/Aula 8/Prática/CabecaDeGenio/dist/
+/Aula 8/VerificadorIdadeSwing/dist/
